--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,7 @@ android:
 
 before_install:
   - chmod +x gradlew
+  - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout;1.0.0"
+  - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.0"
 script:
   - ./gradlew assembleRelease
